--- a/index.html
+++ b/index.html
@@ -11,45 +11,42 @@
 	<div class="main">
 		<div id="data-wrapper">
 			<span>
-				<h1>おかえりなさいませ, <span id="flair">X A M P</span></h1>
+				<h1>Greetings, <span id="flair">Ms. Sparkles</span></h1>
 				<br>
 			</span>
 			<nav>
 				<ul class="blue">
-					<a class="nav-title">| Social |</a>
-					<li><a href="https://www.facebook.com/">Facebook</a></li>
-					<li><a href="https://www.youtube.com/">YouTube</a></li>
-					<li><a href="https://www.reddit.com/">Reddit</a></li>
-					<li><a href="https://www.x.com/">X</a></li>
-					<li><a href="https://discord.com/channels/@me">Discord</a></li>
-					<li><a href="https://www.tumblr.com/">Tumblr</a></li>
+					<a class="nav-title">| Essentials |</a>
+					<li><a href="https://mail.google.com">gmail</a></li>
+					<li><a href="https://app.raindrop.io/my/0">Raindrop</a></li>
+					<li><a href="https://geekess.net/recipes/">Geekess' Cookbook</a></li>
+					<li><a href="https://geekess.net/fress/p/i/">Geekess - FreshRSS</a></li>
+					<li><a href="https://www.mobileread.com/forums/forumdisplay.php?f=26">Mobile Read</a></li>
 				</ul>
 				<ul class="red">
-					<a class="nav-title">| Anime |</a>
-					<li><a href="https://anigo.to/home">AniGO</a></li>
-					<li><a href="https://animesuki.to/home">AnimeSuki</a></li>
-					<li><a href="https://hianime.to/home">HiAnime</a></li>
-					<li><a href="https://myanimelist.net/">MyAnimeList</a></li>
-					<li><a href="https://nyaa.si/">Nyaa</a></li>
-					<li><a href="https://everythingmoe.com/">EverythingMoe</a></li>
+					<a class="nav-title">| Tools |</a>
+  					<li><a href="http://localhost:8888/gui/">local sync</a></li>
+  					<li><a href="http://127.0.0.1:3875/dashboard">local duplicacy</a></li>
+					<li><a href="http://localhost:631/">cups</a>
+					<li><a href="http://172.20.7.7/admin">pihole</a>
+					<li><a href="https://172.20.7.7:8043">Omada Controller</a>
+					<li><a href="http://172.20.7.3:13378">AudioBookshelf</a>
 				</ul>
 				<ul class="green">
-					<a class="nav-title">| Pirate |</a>
-					<li><a href="https://ext.to/">EXT</a></li>
-					<li><a href="https://knaben.org/">Knaben</a></li>
-					<li><a href="https://yts.mx/">YTS</a></li>
-					<li><a href="https://annas-archive.org/">Anna's Archive</a></li>
-					<li><a href="https://filecr.com/en/">FileCR</a></li>
-					<li><a href="https://fmhy.net/">FMHY</a></li>
+					<a class="nav-title">| Media |</a>
+					<li><a href="http://172.20.7.3:8099/web/#/home.html">Jellyfin</a>
+					<li><a href="http://172.20.7.3:8096/web/index.html#!/home">Emby</a>
+					<li><a href="http://172.20.7.3:7878/">Radarr (movies)</a>
+					<li><a href="http://172.20.7.3:8989/">Sonarr (shows)</a>
+					<li><a href="http://172.20.7.3:8081/">qBittorrent</a>
+					<li><a href="http://172.20.7.3:8080/">SABnzbd</a>
 				</ul>
 				<ul class="yellow">
 					<a class="nav-title">| Misc |</a>
-					<li><a href="https://chat.deepseek.com/">Deepseek</a></li>
-					<li><a href="https://chat.qwen.ai/">Qwen</a></li>
-					<li><a href="https://chatgpt.com/">ChatGPT</a></li>
-					<li><a href="https://github.com/">Github</a></li>
-					<li><a href="https://gmail.com/">Gmail</a></li>
-					<li><a href="https://mail.proton.me/u/1/inbox">Proton Mail</a></li>
+					<li><a href="https://github.com/arcanaemia">Github</a></li>
+					<li><a href="https://discord.com/channels/@me">Discord</a></li>
+					<li><a href="https://www.reddit.com/">Reddit</a></li>
+
 				</ul>
 			</nav>
 			<div id="codes"></div>
