--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="icon" type="image/x-icon" href="assets/favicon.svg">
 	<link rel="stylesheet" href="style.css">
-	<title>~</title>
+	<title>Welcome to the web.</title>
 </head>
 
 <body>
