--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<a class="nav-title">| Misc |</a>
 					<li><a href="https://github.com/arcanaemia">Github</a></li>
 					<li><a href="https://discord.com/channels/@me">Discord</a></li>
-					<li><a href="https://www.reddit.com/">Reddit</a></li>
+					<li><a href="https://old.reddit.com/">Reddit</a></li>
 
 				</ul>
 			</nav>
