--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 					<li><a href="http://localhost:631/">cups</a>
 					<li><a href="http://172.20.7.7/admin">pihole</a>
 					<li><a href="https://172.20.7.7:8043">Omada Controller</a>
+					<li><a href="https://172.20.7.7:9090">Cockpit - meetra-surik</a>
+					<li><a href="https://172.20.7.3:9090">Cockpit - nomi-sunrider</a>
 				</ul>
 				<ul class="green">
 					<a class="nav-title">| Media |</a>
